manifest/strapi-deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: strapi-deployment
  labels:
    app: strapi-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: strapi-pod
  template:
    metadata:
      labels:
        app: strapi-pod
    spec:
      containers:
      - name: strapi-container
        image: tim0401/dreamer-strapi:0.1
        ports:
        - containerPort: 1337
        volumeMounts:
        - name: strapi-data
          mountPath: "/dreamer-strapi/app/public/uploads"
      volumes:
      - name: strapi-data
        persistentVolumeClaim:
          claimName: strapi-pvc
