manifest/mongo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo-svc
  labels:
    name: mongo-svc
spec:
  type: ClusterIP
  ports:
    - port: 27017
      targetPort: 27017
  clusterIP: None
  selector:
    app: mongo-pod
