manifest/strapi-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: strapi-service
spec:
  selector:
    app: strapi-pod
  ports:
  - port: 1337
  type: ClusterIP
