manifest/strapi-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: strapi-ingress
spec:
  backend:
    serviceName: strapi-service
    servicePort: 1337
